@startuml

title __TASKS's Class Diagram__\n

  namespace duke {
    namespace tasks {
      class duke.tasks.Deadline {
          # dueDate : LocalDate
          + Deadline()
          + getDueDate()
          + toString()
          # setDueDate()
      }
    }
  }
  

  namespace duke {
    namespace tasks {
      class duke.tasks.Event {
          # dueDateTime : LocalDateTime
          + Event()
          + getDueDateTime()
          + toString()
      }
    }
  }
  

  namespace duke {
    namespace tasks {
      abstract class duke.tasks.Task {
          # description : String
          # isDone : boolean
          + Task()
          + compareTo()
          + getDescription()
          + getStatusIcon()
          + isDone()
          + setDone()
          + toString()
      }
    }
  }
  

  namespace duke {
    namespace tasks {
      class duke.tasks.Todo {
          + Todo()
          + toString()
      }
    }
  }
  

  duke.tasks.Deadline -up-|> duke.tasks.Task
  duke.tasks.Event -up-|> duke.tasks.Task
  duke.tasks.Task .up.|> java.lang.Comparable
  duke.tasks.Todo -up-|> duke.tasks.Task


right footer


PlantUML
endfooter

@enduml
